cleaned up asyn inference

--- a/semantic-segmentation-async-partially-working.ipynb
+++ b/semantic-segmentation-async-partially-working.ipynb
@@ -88,27 +88,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "e050544c-d534-4790-989a-c4d592dd3b8c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from sagemaker import image_uris\n",
-    "#, model_uris, script_uris, hyperparameters\n",
-    "# from sagemaker.model import Model\n",
-    "# from sagemaker.predictor import Predictor\n",
-    "from sagemaker.utils import name_from_base\n",
-    "\n",
-    "# model_id, model_version = ('mxnet-semseg-fcn-resnet101-coco', '*')\n",
-    "# endpoint_name = name_from_base(f\"jumpstart-example-infer-{model_id}\")\n",
-    "\n",
-    "endpoint_name = 'jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-23-35-59-368'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "12b61fb4-e572-4ab3-bd97-0c74f3c80aa3",
    "metadata": {
@@ -118,48 +97,6 @@
    "source": [
     "bucket_prefix = \"DEMO-async-inference\"\n",
     "resource_name = \"AsyncInferenceDemo-{}-{}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "352da965-69c2-460f-a566-38e774c5776a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from sagemaker import image_uris"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "f5a908d9-f9e6-4f00-a1cd-0444bed5cea6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "model_name = 'jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-03-29-08-394'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "91573e76-3271-486b-b650-1b789bf3e2ef",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "# async_predictor = model_predictor.deploy(\n",
-    "#     async_inference_config=async_config,\n",
-    "#     instance_type=\"ml.m5.xlarge\",\n",
-    "#     initial_instance_count=1,\n",
-    "#     endpoint_name=endpoint_name,\n",
-    "# )"
    ]
   },
   {
@@ -183,13 +120,13 @@
    },
    "outputs": [],
    "source": [
-    "jumpstart_assets_s3_bucket = f\"jumpstart-cache-prod-{aws_region}\"\n",
-    "pedestrian_img_key_prefix = \"inference-notebook-assets\"\n",
-    "pedestrian_img = \"img_pedestrian.png\"\n",
+    "# jumpstart_assets_s3_bucket = f\"jumpstart-cache-prod-{aws_region}\"\n",
+    "# pedestrian_img_key_prefix = \"inference-notebook-assets\"\n",
+    "# pedestrian_img = \"img_pedestrian.png\"\n",
     "\n",
-    "boto3.client(\"s3\").download_file(\n",
-    "    jumpstart_assets_s3_bucket, f\"{pedestrian_img_key_prefix}/{pedestrian_img}\", pedestrian_img\n",
-    ")"
+    "# boto3.client(\"s3\").download_file(\n",
+    "#     jumpstart_assets_s3_bucket, f\"{pedestrian_img_key_prefix}/{pedestrian_img}\", pedestrian_img\n",
+    "# )"
    ]
   },
   {
@@ -201,29 +138,29 @@
    },
    "outputs": [],
    "source": [
-    "import json\n",
+    "# import json\n",
     "\n",
     "\n",
-    "def query(model_predictor, image_file_name):\n",
-    "    \"\"\"Query the model predictor.\"\"\"\n",
+    "# def query(model_predictor, image_file_name):\n",
+    "#     \"\"\"Query the model predictor.\"\"\"\n",
     "\n",
-    "    with open(image_file_name, \"rb\") as file:\n",
-    "        input_img_rb = file.read()\n",
+    "#     with open(image_file_name, \"rb\") as file:\n",
+    "#         input_img_rb = file.read()\n",
     "\n",
-    "    query_response = model_predictor.predict(\n",
-    "        input_img_rb,\n",
-    "        {\n",
-    "            \"ContentType\": \"application/x-image\",\n",
-    "            \"Accept\": \"application/json;verbose\",\n",
-    "        },\n",
-    "    )\n",
-    "    return query_response\n",
+    "#     query_response = model_predictor.predict(\n",
+    "#         input_img_rb,\n",
+    "#         {\n",
+    "#             \"ContentType\": \"application/x-image\",\n",
+    "#             \"Accept\": \"application/json;verbose\",\n",
+    "#         },\n",
+    "#     )\n",
+    "#     return query_response\n",
     "\n",
     "\n",
-    "def parse_response(query_response):\n",
-    "    \"\"\"Parse response and return predictions as well as the set of all labels and object labels present in the image.\"\"\"\n",
-    "    response_dict = json.loads(query_response)\n",
-    "    return response_dict[\"predictions\"], response_dict[\"labels\"], response_dict[\"image_labels\"]\n"
+    "# def parse_response(query_response):\n",
+    "#     \"\"\"Parse response and return predictions as well as the set of all labels and object labels present in the image.\"\"\"\n",
+    "#     response_dict = json.loads(query_response)\n",
+    "#     return response_dict[\"predictions\"], response_dict[\"labels\"], response_dict[\"image_labels\"]\n"
    ]
   },
   {
@@ -262,20 +199,6 @@
    "outputs": [],
    "source": [
     "sm_runtime = boto_session.client(\"sagemaker-runtime\")\n",
-    "\n",
-    "# image_file_name = \"img_pedestrian.png\"\n",
-    "\n",
-    "# with open(image_file_name, \"rb\") as file:\n",
-    "#         input_img_rb = file.read()\n",
-    "\n",
-    "        \n",
-    "# sm_runtime.invoke_endpoint_async(EndpointName='jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-23-35-59-368', Body=input_img_rb,\n",
-    "#                           ContentType=\"application/x-image\",\n",
-    "#                            Accept=\"application/json;verbose\"\n",
-    "#         )\n",
-    "# async_resp = sm_runtime.invoke_endpoint_async(EndpointName='jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-23-35-59-368', \n",
-    "#                                  InputLocation=input_img_s3\n",
-    "#         )\n",
     "\n",
     "async_resp = sm_runtime.invoke_endpoint_async(EndpointName='semantec-segmentation-async-with-sns', \n",
     "                                 InputLocation=input_img_s3,\n",
@@ -353,178 +276,6 @@
    "source": [
     "async_resp"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "b9c46d57-b80a-459b-89a8-23fe033c94c6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'base_model_predictor' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m query_response \u001b[38;5;241m=\u001b[39m query(\u001b[43mbase_model_predictor\u001b[49m, pedestrian_img)\n\u001b[1;32m      3\u001b[0m predictions, labels, image_labels \u001b[38;5;241m=\u001b[39m parse_response(query_response)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mObjects present in the picture:\u001b[39m\u001b[38;5;124m\"\u001b[39m, image_labels)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'base_model_predictor' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "query_response = query(base_model_predictor, pedestrian_img)\n",
-    "\n",
-    "predictions, labels, image_labels = parse_response(query_response)\n",
-    "print(\"Objects present in the picture:\", image_labels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "19180904-a98f-4662-841b-ba155e284691",
-   "metadata": {},
-   "source": [
-    "## trying with sync end pt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f37b3f9b-543a-4392-a80e-123e0abd0259",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "sm_runtime = boto_session.client(\"sagemaker-runtime\")\n",
-    "\n",
-    "image_file_name = \"img_pedestrian.png\"\n",
-    "\n",
-    "with open(image_file_name, \"rb\") as file:\n",
-    "        input_img_rb = file.read()\n",
-    "\n",
-    "        \n",
-    "resp = sm_runtime.invoke_endpoint(EndpointName='semantec-segmentation-sync-mxnet-semseg-2023-10-30-02-54-44-887', Body=input_img_rb,\n",
-    "                          ContentType=\"application/x-image\",\n",
-    "                           Accept=\"application/json;verbose\"\n",
-    "        )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "44855ce7-4abb-4654-886f-bf6224de967e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'resp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mresp\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'resp' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "resp"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "e5bf3cf4-680d-428f-9886-a19976b1a896",
-   "metadata": {},
-   "source": [
-    "resp['Body']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "37cf9357-ad6a-470e-8c08-68b54934c23d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'RequestId': '9b880701-afae-421c-b4e8-e15dc59ca33c', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': '9b880701-afae-421c-b4e8-e15dc59ca33c', 'x-amzn-invoked-production-variant': 'AllTraffic', 'date': 'Mon, 30 Oct 2023 05:22:02 GMT', 'content-type': 'application/json;verbose', 'content-length': '1529426', 'connection': 'keep-alive'}, 'RetryAttempts': 0}\n",
-      "application/json;verbose\n",
-      "AllTraffic\n",
-      "<botocore.response.StreamingBody object at 0x7f625f42ab30>\n"
-     ]
-    }
-   ],
-   "source": [
-    "for keys in resp.keys():\n",
-    "    print (resp[keys])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "3975fc15-946f-49fc-8fc7-ce5628abca47",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "821bed09-a8f1-4edf-b294-2947a84c890c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "jsresp = json.loads(resp['Body'].read().decode(\"utf-8\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "9e0f539f-9a7e-4635-a49f-dc6b1993fc6e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "536"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(jsresp['predictions'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad5d7972-cae6-4f52-b31b-2a8cfad6472c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
