--- a/chatbot/setup.ipynb
+++ b/chatbot/setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "71115d86-a93a-4ae1-9bf8-f1d651e5f4b3",
    "metadata": {
     "tags": []
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "9e79dbce-587d-4461-84b6-6c7c33377819",
    "metadata": {
     "tags": []
@@ -72,7 +72,7 @@
        "'arn:aws:iam::287758680514:role/service-role/AmazonSageMaker-ExecutionRole-20231027T004238'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "fbf97a1b-b17c-42f8-a5a2-4b379d6ebed1",
    "metadata": {
     "tags": []
@@ -161,7 +161,7 @@
     }
    ],
    "source": [
-    "role = iam.create_role(RoleName='shakirachatbot-role', AssumeRolePolicyDocument=json.dumps(role_policy_document))['Role']\n",
+    "role = iam.create_role(RoleName='songChatbot-role', AssumeRolePolicyDocument=json.dumps(role_policy_document))['Role']\n",
     "print ('Created custom role shakirachatbot-role')\n",
     "wait(3)"
    ]
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "6271ac75-a244-471c-ae0c-7d3a87c31a6a",
    "metadata": {
     "tags": []
@@ -264,26 +264,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "7b506a12-eefd-46c5-8486-5f064b585e9e",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'chatbot/__init__.py'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mzipfile\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ZipFile\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m ZipFile(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlambda-package.zip\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m myzip:\n\u001b[0;32m----> 4\u001b[0m     \u001b[43mmyzip\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mchatbot/__init__.py\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m     myzip\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchatbot/botcontrol.py\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/pytorch_p310/lib/python3.10/zipfile.py:1741\u001b[0m, in \u001b[0;36mZipFile.write\u001b[0;34m(self, filename, arcname, compress_type, compresslevel)\u001b[0m\n\u001b[1;32m   1736\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_writing:\n\u001b[1;32m   1737\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m   1738\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCan\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt write to ZIP archive while an open writing handle exists\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1739\u001b[0m     )\n\u001b[0;32m-> 1741\u001b[0m zinfo \u001b[38;5;241m=\u001b[39m \u001b[43mZipInfo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43marcname\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1742\u001b[0m \u001b[43m                          \u001b[49m\u001b[43mstrict_timestamps\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_strict_timestamps\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1744\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m zinfo\u001b[38;5;241m.\u001b[39mis_dir():\n\u001b[1;32m   1745\u001b[0m     zinfo\u001b[38;5;241m.\u001b[39mcompress_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
-      "File \u001b[0;32m~/anaconda3/envs/pytorch_p310/lib/python3.10/zipfile.py:504\u001b[0m, in \u001b[0;36mZipInfo.from_file\u001b[0;34m(cls, filename, arcname, strict_timestamps)\u001b[0m\n\u001b[1;32m    502\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(filename, os\u001b[38;5;241m.\u001b[39mPathLike):\n\u001b[1;32m    503\u001b[0m     filename \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mfspath(filename)\n\u001b[0;32m--> 504\u001b[0m st \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    505\u001b[0m isdir \u001b[38;5;241m=\u001b[39m stat\u001b[38;5;241m.\u001b[39mS_ISDIR(st\u001b[38;5;241m.\u001b[39mst_mode)\n\u001b[1;32m    506\u001b[0m mtime \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mlocaltime(st\u001b[38;5;241m.\u001b[39mst_mtime)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'chatbot/__init__.py'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from zipfile import ZipFile\n",
     "\n",
@@ -294,35 +280,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "ad9cafc0-deb7-4291-824c-0029f969cd97",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# abc = open('lambda-package.zip').read().decode('utf-8')\n",
+    "import zipfile\n",
+    "\n",
+    "file_content = \"\"\n",
+    "# Open the ZIP file\n",
+    "with zipfile.ZipFile('lambda-package.zip', 'r') as zip_ref:\n",
+    "    # List all file names in the zip\n",
+    "    for file_name in zip_ref.namelist():\n",
+    "        # print(f'Reading file: {file_name}')\n",
+    "        \n",
+    "        # Read each file\n",
+    "        with zip_ref.open(file_name) as file:\n",
+    "            # If it's a text file, you need to know the correct encoding\n",
+    "            # If you're not sure, you might have to try different encodings\n",
+    "            file_content += file.read().decode('utf-8')  # or 'cp1252', 'iso-8859-1', etc.\n",
+    "            # print(file_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8fc3abe4-9868-4f39-87a2-c186fca8dc3a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with open('./lambda-package.zip', 'rb') as f:\n",
+    "    zip_file_content = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "42f5d09e-a099-4b3f-8a6d-b73cb652947c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# zip_file_content"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "25d9349f-e83e-4b7c-8501-b3b07dee9782",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'lambda-package.zip'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m botcontrol_function \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCode\u001b[39m\u001b[38;5;124m'\u001b[39m: {\u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mZipFile\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlambda-package.zip\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mread()},\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDescription\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFunction controling the ShakiraChatbot, powered up by Lex\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnvironment\u001b[39m\u001b[38;5;124m'\u001b[39m: {\u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVariables\u001b[39m\u001b[38;5;124m'\u001b[39m: {\u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMASHAPE_API_KEY\u001b[39m\u001b[38;5;124m'\u001b[39m: os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMASHAPE_API_KEY\u001b[39m\u001b[38;5;124m'\u001b[39m]}},\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFunctionName\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(FUNCTION_NAME),\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHandler\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchatbot/botcontrol.lambda_handler\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMemorySize\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m128\u001b[39m,\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRole\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124marn:aws:iam::\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m:role/shakirachatbot-role\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(ACCOUNT_ID),\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRuntime\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpython2.7\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTimeout\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m10\u001b[39m,\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTracingConfig\u001b[39m\u001b[38;5;124m'\u001b[39m: {\u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMode\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPassThrough\u001b[39m\u001b[38;5;124m'\u001b[39m},\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPublish\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     13\u001b[0m }\n",
-      "File \u001b[0;32m~/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/IPython/core/interactiveshell.py:286\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    279\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    280\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    281\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    282\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    283\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    284\u001b[0m     )\n\u001b[0;32m--> 286\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'lambda-package.zip'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import os\n",
+    "FUNCTION_NAME = 'Song-Botcontrol'\n",
+    "ACCOUNT_ID=287758680514\n",
+    "ROLE_NAME = 'AmazonSageMaker-ExecutionRole-20231027T004238'\n",
     "botcontrol_function = {\n",
-    "    u'Code': {u'ZipFile': open('lambda-package.zip').read()},\n",
-    "    u'Description': u'Function controling the ShakiraChatbot, powered up by Lex',\n",
-    "    u'Environment': {u'Variables': {u'MASHAPE_API_KEY': os.environ['MASHAPE_API_KEY']}},\n",
+    "    u'Code': {u'ZipFile': zip_file_content},\n",
+    "    u'Description': u'Function controling the Songs Chatbot, powered up by Lex',\n",
     "    u'FunctionName': u'{}'.format(FUNCTION_NAME),\n",
     "    u'Handler': u'chatbot/botcontrol.lambda_handler',\n",
     "    u'MemorySize': 128,\n",
-    "    u'Role': u'arn:aws:iam::{}:role/shakirachatbot-role'.format(ACCOUNT_ID),\n",
-    "    u'Runtime': u'python2.7',\n",
+    "    u'Role': 'arn:aws:iam::287758680514:role/basic-lambda-execute',\n",
+    "    u'Runtime': u'python3.10',\n",
     "    u'Timeout': 10,\n",
     "    u'TracingConfig': {u'Mode': u'PassThrough'},\n",
     "    u'Publish': True,\n",
@@ -331,21 +359,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "32ced55f-9e24-4ee0-b33f-1842dbefb14b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lambda_role =  u'arn:aws:iam::{}:role/{}'.format(ACCOUNT_ID,ROLE_NAME)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
+   "id": "491d22c4-33a2-480b-a247-30e657485400",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'arn:aws:iam::287758680514:role/AmazonSageMaker-ExecutionRole-20231027T004238'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda_role"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "13d11a9f-15dd-4729-a12f-9c68614ad8ec",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'botcontrol_function' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m lambd\u001b[38;5;241m.\u001b[39mcreate_function(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[43mbotcontrol_function\u001b[49m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCreated lambda function \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(FUNCTION_NAME))\n\u001b[1;32m      3\u001b[0m wait(\u001b[38;5;241m3\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'botcontrol_function' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created lambda function Song-Botcontrol\n"
      ]
     }
    ],
